# taskBoard

./: .gitignore
TaskBoard/: CMakeLists.txt  README.MD
TaskBoard/include/: graphicstaskitem.h  projectheaderitem.h  taskboard.h  taskboardserializer.h  timelineview.h
TaskBoard/src/: graphicstaskitem.cpp  main.cpp  projectheaderitem.cpp  taskboard.cpp  taskboardserializer.cpp  timelineview.cpp
build-TaskBoard-Desktop_Qt_5_12_10_MinGW_32_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-TaskBoard-Desktop_Qt_5_12_10_MinGW_32_bit-Debug/.cmake/api/v1/reply/: cache-v2-3172b8c51103e97be657.json  cmakeFiles-v1-a7a3d616a3df7d15faa5.json  codemodel-v2-9166993e614053f63f65.json  index-2026-06-08T11-49-54-0491.json  target-TaskBoard-Debug-d2a9928f649599f7be4f.json  target-TaskBoard_autogen-Debug-f1c5d98355db14e44d1d.json
build-TaskBoard-Desktop_Qt_5_12_10_MinGW_32_bit-Debug/TaskBoard_autogen/: mocs_compilation.cpp
build-TaskBoard-Desktop_Qt_5_12_10_MinGW_32_bit-Debug/TaskBoard_autogen/6YEA5652QU/: moc_taskboard.cpp  moc_timelineview.cpp
